# posthoc

./: .gitignore  README.md
api/openapi/: hypergraph-api.yaml
benchmarks/: inference_capture_bench.py
control_plane/: README.md  app.py  requirements.txt
dashboards/grafana/: sidecar-overview.json
docs/: README.md  api-reference.md  architecture.md  change-management-checklist.md  change-management.md  faq.md  hif-schema.md  setup.md  troubleshooting.md
docs/diagrams/: architecture.mmd
docs/runbooks/: attach_rate_and_capacity.md  deploy.md  microbenchmark_autoscaling.md  scale_and_recovery.md  secrets_and_keys.md
docs/security/: SECURITY.md  iam-policies.md
docs/testing/: e2e_plan.md  load_stress_chaos.md
docs/tutorials/: e2e.md  python-quickstart.md  typescript-quickstart.md
docs/workshop/: workshop-60min-outline.md
examples/python/: e2e_quickstart.py
examples/typescript/: README.md
libs/: README.md  requirements.txt
libs/hif/: README.md  schema.json  validator.py
libs/sae/: README.md  cli.py  loader.py
libs/sanitize/: pii.py
manifests/argocd/: argocd-apps.yaml
manifests/karpenter/: karpenter-provisioners.yaml
manifests/otel/: otel-collector.yaml
sdks/python/your_company_explainability/: README.md  pyproject.toml
sdks/python/your_company_explainability/examples/: quickstart.py
sdks/python/your_company_explainability/your_company_explainability/: client.py
services/explainer/: Dockerfile  README.md  requirements.txt
services/gateway/: Dockerfile  README.md  requirements.txt
services/interceptor/: Dockerfile  (+2 more)
ui/: index.html
(+70 files in other folders)
