[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-company-explainability"
version = "0.1.0"
description = "Python SDK for the Hypergraph Interpretability API (Async Sidecar)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Company", email = "dev@your-company.com" }]
dependencies = [
  "httpx>=0.25.0,<1.0"
]

[project.urls]
Homepage = "https://your-company.com"
Repository = "https://github.com/your-company/hypergraph-interpretability"

[tool.setuptools.packages.find]
where = ["your_company_explainability"]
include = ["your_company_explainability*"]
exclude = ["tests*"]